--- a/src/leabra/TODO
+++ b/src/leabra/TODO
@@ -9,8 +9,9 @@ commit:
 * cleanup other uses of RunPending -> process events or remove??  test for
   need for css Cont RunPending -- test in hv model.
 
-* add a net_text_display flag, and play with complexity vis-a-vis rendering
-  (probably not worth it for flag -- costs a lot in render but is not a big deal..)
+* add 2d text flag for netview. play with complexity vis-a-vis rendering
+  (probably not worth it for flag -- costs a lot in render but is not a big
+  deal..)
 
 * lookup mac double-pass antialiasing problem?
 
