--- a/src/leabra/TODO
+++ b/src/leabra/TODO
@@ -2,7 +2,7 @@ leabra todo list:
 
 commit:
 
-* smartref is not a taBase -- change _list to PtrList (like Brad's)..
+* ignore all path exprs and all :: expr rhs.
 
 * datatable: Writeclose_impl -- need flag for dmem auto write file or not.
   all procs are saving epoch log file and that is not good..  maybe just make that a separate
