fixed css BindArgs error for incomplete args.

--- a/src/leabra/TODO
+++ b/src/leabra/TODO
@@ -6,8 +6,9 @@ commit:
 ------------
 current:
 
+* invalid path thing in setvalstr -- sort..?
+
 * finish converting taMisc::Error and taMisc::CheckError calls..
-* check matrix insert -- seems to not be copying all the way to end
 
 * datatable: 
   * add DataGetCurRowVars -- just like data calc loop var getter -- use in applyimage
@@ -48,9 +49,7 @@ Other Algorithms:
 
 --------------
 
-* css: p voidfun = crash; bindargs seems to not be getting the void??
-  e.g., p taMisc::include_paths.List();
-  css include path & files from old css..
+* css include path & files from old css..
 
 ------------------
 hv model
