added SelectForEditCompare -- "diffs" between objects!  very convenient for comparing specs to see what is different.. also a BUTTON on the select edit itself.  also added support for TYPE_ON_n_xxx where n = arg number -- easier version of arg defs -- arg_idx is now a member of taiArgType.  Also fixed a load RecvCons bug and displaying of unit names or values..

--- a/src/leabra/TODO
+++ b/src/leabra/TODO
@@ -6,7 +6,9 @@ commit:
 ------------
 current:
 
-* load/save all prog_lib and testsprojects
+* change tokenptrargtype to use new obj browser!
+
+* load/save all prog_lib and testsprojects & test convert
 * NewLayer not working in netview
 * default type not loading (#311)
 
